# jdy-cms

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  main.py  pyproject.toml  voucher_demo_output.json
.claude/: settings.local.json
docs/: 25-2191.lic  api_reference.md  technical_handover.md
scripts/: debug_api.py  demo.py  demo_ledger.py  generate_secure_api_key.py  get_auth_info.py  test_evidence.py
src/: app.py
src/api/: auth.py  client.py  dependencies.py
src/api/routes/: cashier.py  ledger.py  report.py  settings.py  voucher.py
src/config/: settings.py
src/models/: cashier_models.py  ledger_models.py  report_models.py  settings_models.py  voucher.py
src/services/: cashier_service.py  evidence_service.py  ledger_service.py  report_service.py  settings_service.py  voucher_service.py
src/utils/: signature.py
tests/: reproduce_report.py  test_cashier.py
tests/unit/: test_signature.py
